k8s-manifests/prospectos-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prospectos-frontend-app
  namespace: frontend-ns
  labels:
    app: prospectos-frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prospectos-frontend-app
  template:
    metadata:
      labels:
        app: prospectos-frontend-app
    spec:
      containers:
        - name: prospectos-frontend-app
          image: registry.registry.svc.cluster.local:5000/prospectos-frontend-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
